import { snapshotTest } from 'testing';

describe('IconButton demo snapshot', () => {
  snapshotTest('IconButton');
});
