// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton demo snapshot > IconButton demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
</div>
`;

exports[`IconButton demo snapshot > IconButton demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-rounded"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-square"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
</div>
`;

exports[`IconButton demo snapshot > IconButton demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <button
    className="bui-icon-btn bui-icon-btn-small bui-icon-btn-default bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-large bui-icon-btn-default bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
</div>
`;

exports[`IconButton demo snapshot > IconButton demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "10px",
      "background": "var(--bui-color-bg-default)",
      "borderRadius": "8px",
      "padding": "24px",
    }
  }
>
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "8px",
      }
    }
  >
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-primary"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-success"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-info"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-warning"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-danger"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-light"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-dark"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
  </div>
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "8px",
      }
    }
  >
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-primary"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-success"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-info"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-warning"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-danger"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-light"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-dark"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
  </div>
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "8px",
      }
    }
  >
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-primary"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-success"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-info"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-warning"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-danger"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-light"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-dark"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
  </div>
  <div
    className="bui-stack"
    style={
      {
        "--align-items": "center",
        "--flex-direction": "row",
        "--flex-wrap": "nowrap",
        "--justify-content": "center",
        "--spacing": "8px",
      }
    }
  >
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-subtle bui-icon-btn-circular bui-icon-btn-primary"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-subtle bui-icon-btn-circular bui-icon-btn-success"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-subtle bui-icon-btn-circular bui-icon-btn-info"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-subtle bui-icon-btn-circular bui-icon-btn-warning"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-subtle bui-icon-btn-circular bui-icon-btn-danger"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-subtle bui-icon-btn-circular bui-icon-btn-light"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
    <button
      className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-subtle bui-icon-btn-circular bui-icon-btn-dark"
      type="button"
    >
      <svg
        className="bui-svg-icon"
        dangerouslySetInnerHTML={
          {
            "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </button>
  </div>
</div>
`;

exports[`IconButton demo snapshot > IconButton demo snapshot 0 5`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-primary bui-icon-btn-disabled"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-outlined bui-icon-btn-circular bui-icon-btn-primary bui-icon-btn-disabled"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-contained bui-icon-btn-circular bui-icon-btn-primary bui-icon-btn-disabled"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M68.3 56.5c9.1 3.3 13.8 13.2 10.8 22.3l-.3.8C75.6 88.5 64.8 93 56.4 90l-4-1.5h-.1c-12.8-5.9-24.4-16.6-30-27.8-6.7-13.2-8.4-30.3-3.5-43.9C22.4 7.1 32.2 2.7 41.7 6.2c9.3 3.4 14 13.6 10.6 22.9-2.4 6.5-8.2 10.5-14.9 11 .8 3.8 2.1 7.6 3.9 11.2C43.4 55.4 46 59 49 62c4.7-5.7 12.1-8.1 19.3-5.5z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
</div>
`;

exports[`IconButton demo snapshot > IconButton demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <button
    aria-disabled={false}
    aria-label="Search"
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M46.629 3c24.095 0 43.628 19.5 43.628 43.555a43.352 43.352 0 0 1-9.952 27.693l11.406 11.306a4.35 4.35 0 0 1 .022 6.16 4.368 4.368 0 0 1-6.17.021L71.816 78.108a4.343 4.343 0 0 1-1.263-3.567 4.36 4.36 0 0 1 1.168-3.766c6.256-6.458 9.81-15.054 9.81-24.22 0-19.244-15.626-34.844-34.902-34.844-19.277 0-34.903 15.6-34.903 34.844S27.352 81.4 46.629 81.4c3.98 0 7.862-.664 11.535-1.947a4.365 4.365 0 0 1 5.559 2.672 4.354 4.354 0 0 1-2.677 5.55 43.634 43.634 0 0 1-14.417 2.436C22.533 90.11 3 70.61 3 46.555 3 22.5 22.533 3 46.629 3Z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    aria-disabled={false}
    aria-label="CloseIconIcon"
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="m53.6 48 21.2 21.2c1.6 1.6 1.6 4.1 0 5.6-1.6 1.6-4.1 1.6-5.6 0L48 53.6 26.8 74.8c-1.6 1.6-4.1 1.6-5.6 0-1.6-1.6-1.6-4.1 0-5.6L42.4 48 21.2 26.8c-1.6-1.6-1.6-4.1 0-5.6s4.1-1.6 5.6 0L48 42.4l21.2-21.2c1.6-1.6 4.1-1.6 5.6 0 1.6 1.6 1.6 4.1 0 5.6L53.6 48z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    aria-disabled={false}
    aria-label="Settings"
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular"
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="m88.5 51.8-17.1 31c-1.2 2.2-3.5 3.6-6.1 3.6h-34c-2.5 0-4.8-1.4-6.1-3.6l-17.1-31c-1.2-2.1-1.2-4.7 0-6.8l17.1-31c1.2-2.2 3.5-3.6 6.1-3.6h34c2.5 0 4.8 1.4 6.1 3.6l17.1 31c1.2 2.1 1.2 4.7 0 6.8zm-5.2-2.9c.2-.3.2-.7 0-1l-17.1-31c-.2-.3-.5-.5-.9-.5H31.5c-.4 0-.7.2-.9.5l-17.1 31c-.2.3-.2.7 0 1l17.1 31c.2.3.5.5.9.5h33.9c.4 0 .7-.2.9-.5l17-31zM48.2 64c-8.8 0-16-7.2-16-16s7.2-16 16-16 16 7.2 16 16-7.2 16-16 16zm0-6c5.5 0 10-4.5 10-10s-4.5-10-10-10-10 4.5-10 10 4.4 10 10 10z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
</div>
`;

exports[`IconButton demo snapshot > IconButton demo snapshot 0 7`] = `
<div
  className="bui-stack"
  style={
    {
      "--align-items": "center",
      "--flex-direction": "row",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "8px",
    }
  }
>
  <button
    aria-disabled={false}
    aria-label="Add to favorites"
    aria-pressed={false}
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-neutral"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M48 17.4C53.2 13 57 11 62.6 11c11.8 0 19.9 7.2 23.3 19 .5 1.6-.5 3.3-2.1 3.7-1.6.5-3.3-.5-3.7-2.1C77.5 22.2 71.5 17 62.6 17c-3.9 0-6.6 1.4-11 5.2-.2.2-1.4 1.2-1.7 1.4-1.1 1-2.8 1-3.9 0-.3-.3-1.5-1.3-1.7-1.4-4.4-3.7-7.1-5.2-11-5.2C21.6 17 14 26.5 14 40.1c0 10.4 10.6 23.3 32.2 38.3 1 .7 2.4.7 3.5 0 4.4-3.1 7.4-5.3 8.8-6.4 1.3-1 3.2-.8 4.2.5s.8 3.2-.5 4.2c-1.5 1.2-4.5 3.4-9.1 6.6-3.1 2.2-7.3 2.2-10.4 0C19.7 67.4 8 53.1 8 40.1 8 23.4 17.9 11 33.4 11c5.6 0 9.4 2 14.6 6.4zM77 52h8c1.7 0 3 1.3 3 3s-1.3 3-3 3h-8v8c0 1.7-1.3 3-3 3s-3-1.3-3-3v-8h-8c-1.7 0-3-1.3-3-3s1.3-3 3-3h8v-8c0-1.7 1.3-3 3-3s3 1.3 3 3v8z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
  <button
    aria-disabled={false}
    aria-expanded={false}
    aria-haspopup="menu"
    aria-label="Expand menu"
    className="bui-icon-btn bui-icon-btn-medium bui-icon-btn-default bui-icon-btn-circular bui-icon-btn-neutral"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="bui-svg-icon"
      dangerouslySetInnerHTML={
        {
          "__html": "<path d="M20 66c3.3 0 6 2.7 6 6v4c0 3.3-2.7 6-6 6h-4c-3.3 0-6-2.7-6-6v-4c0-3.3 2.7-6 6-6h4zm63 5c1.7 0 3 1.3 3 3s-1.3 3-3 3H37c-1.7 0-3-1.3-3-3s1.3-3 3-3h46zm-63 1h-4v4h4v-4zm0-32c3.3 0 6 2.7 6 6v4c0 3.3-2.7 6-6 6h-4c-3.3 0-6-2.7-6-6v-4c0-3.3 2.7-6 6-6h4zm63 5c1.7 0 3 1.3 3 3s-1.3 3-3 3H37c-1.7 0-3-1.3-3-3s1.3-3 3-3h46zm-63 1h-4v4h4v-4zm0-32c3.3 0 6 2.7 6 6v4c0 3.3-2.7 6-6 6h-4c-3.3 0-6-2.7-6-6v-4c0-3.3 2.7-6 6-6h4zm63 5c1.7 0 3 1.3 3 3s-1.3 3-3 3H37c-1.7 0-3-1.3-3-3s1.3-3 3-3h46zm-63 1h-4v4h4v-4z"/>",
        }
      }
      focusable="false"
      viewBox="0 0 96 96"
    />
  </button>
</div>
`;
